--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Campus Crave</title>
 </head>
 
-<body>
+<body class="bg-gray-50">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
